# replayguard-build-week

./: .env.example  .gitignore  BUILD_WEEK_EVALUATION_GRANT.md  COMMERCIAL-LICENSING.md  IMPLEMENTATION_PLAN.md  JUDGE_TEST.md  LICENSE  PILOT_VALIDATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BUILD_WEEK_CHANGELOG.md  BUILD_WEEK_DOCUMENTATION_RESTORATION.md  PREEXISTING_CONCEPTS.md
fixtures/: README.md  clean_policy.yaml  demo_brittle.yaml  distractor_flip.yaml  unsupported_persistence.yaml
reports/examples/: README.md
reports/examples/brittle/: index.html  result.json
reports/examples/clean/: index.html  result.json
scripts/: validate_pilot_package.py
src/replayguard/: __init__.py  __main__.py  adapters.py  analysis.py  cli.py  fixtures.py  logging_utils.py  models.py  perturbations.py  report.py  runner.py  verdicts.py
src/replayguard/templates/: report.html.j2
tests/: conftest.py  test_http_adapter.py  test_model_analysis.py  test_perturbations.py  test_pilot_package.py  test_report_and_cli.py  test_runner.py
validation/pilot/: CLAIM_EVIDENCE_MATRIX.md  METHODOLOGY.md  README.md  artifact_manifest.json  corrected_study_analysis_summary.json  equivalent_disagreement_audit.csv  evaluated_version.json  fixture_manifest.csv  native_released_evaluator_summary.json  run_manifest.csv
